# Hackathon-1-Physical-AI-Humanoid-Robotics

./: .gitignore  GEMINI_AGENT_CONFIG_SUMMARY.md  README.md  demo_gemini_agent.py  list_gemini_models.py  simple_openai_agent.py  test_comprehensive_openai_config.py  test_openai_agent.py  test_openai_config.py  validation-report.md  vercel.json  verify_api_key.py
backend/: README.md  check_ingestion.py  debug_content_extraction.py  debug_extraction_process.py  debug_settings.py  final_verification.py  find_actual_content.py  find_content_containers.py  find_content_simple.py  focused_ingestion.py  improved_ingestion.py  minimal_server.py  pyproject.toml  requirements.txt  retrieval_validation.py  run_ingestion.py  setup_local_qdrant.py  start_server.py  start_server_alt.py  start_server_delayed.py  start_server_no_emoji.py  start_with_logs.py  targeted_ingestion.py  test_actual_extraction.py  test_connection.py  test_content.py  test_content_structure.py  test_env_loading.py  test_openrouter_agent.py  test_port.py  test_qdrant.py  test_qdrant_approach.py  test_qdrant_creds.py  test_qdrant_fixed.py  test_qdrant_methods.py  test_qdrant_methods2.py  test_real_qdrant.py  test_search_api.py  test_selenium.py  test_server.py  (+5 more)
backend/app/: main.py
backend/app/config/: settings.py
backend/scripts/: ingest_content.py  ingest_my_book.py  validate_rag.py
backend/src/: main.py
backend/tests/: test_chunker.py  test_configuration.py  test_embedding_service.py  test_integration.py  test_main.py  test_text_extractor.py  test_url_crawler.py  test_vector_storage.py
(+194 files in other folders)
